Mudei a cor dos botões:hover e um link

--- a/app.css
+++ b/app.css
@@ -35,7 +35,7 @@
 
 .darktheme {
   /* Dark Colors  */
-  --accent: #F28A71; /* Hover color */
+  --accent: #dbdbdb; /* Hover color */
   --background: #19171a; /* Background color */
   --cards: #201e21; /* Cards color */
 
